# superset-mcp

./: README.md  gemini-extension.json  pyproject.toml
docs/: conventions.md
scripts/: start-mcp.sh
src/superset_mcp/: __init__.py  client.py  config.py  server.py
tests/: test_config.py  test_openapi.py  test_server.py
