[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superset-mcp-server"
version = "0.1.0"
description = "MCP server for Apache Superset APIs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "superset-mcp contributors" }]
license = { text = "MIT" }
dependencies = [
  "fastmcp>=0.4.1",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.6.0",
]

[project.scripts]
superset-mcp-server = "superset_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
